Adding Affirm.affirmSame